# assimp_test

./: .gitignore  CMakeLists.txt  main.cpp
dep/lib/: assimp-vc142-mtd.lib
